Principal search implementation, search with keys words implementation, search with tags implementation

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <img
               src="assets/icons/dropdown-open.svg"
               alt="Open select"
-              class="dropdown-open"
+              class="ingredients-dropdown-open"
             />
           </button>
           <div class="ingredients-dropdown">
@@ -76,7 +76,7 @@
             <img
               src="assets/icons/dropdown-close.svg"
               alt="Close select"
-              class="dropdown-close"
+              class="ingredients-dropdown-close"
             />
             <div
               id="listbox-menu"
@@ -86,43 +86,70 @@
           </div>
         </div>
 
-        <div class="appareils-selection">
-          <button type="button" class="appareils-select">
+        <div class="appliances-selection">
+          <button type="button" class="appliances-select">
             Appareils
 
             <img
               src="assets/icons/dropdown-open.svg"
               alt="Open select"
-              class="dropdown-open"
+              class="appliances-dropdown-open"
             />
+          </button>
 
+          <div class="appliances-dropdown">
+            <div class="appliances-search">
+              <input
+                class="appliances-search-bar"
+                id="searchbar3"
+                type="text"
+                name="search"
+                placeholder="Rechercher un appareil"
+              />
+            </div>
             <img
               src="assets/icons/dropdown-close.svg"
               alt="Close select"
-              class="dropdown-close"
+              class="appliances-dropdown-close"
             />
-          </button>
+            <div
+              id="listbox1-menu"
+              class="appliances-menu"
+              role="listbox"
+            ></div>
+          </div>
         </div>
 
-        <div class="ustensiles-selection">
-          <button type="button" class="ustensiles-select">
+        <div class="ustensils-selection">
+          <button type="button" class="ustensils-select">
             Ustensiles
 
             <img
               src="assets/icons/dropdown-open.svg"
               alt="Open select"
-              class="dropdown-open"
+              class="ustensils-dropdown-open"
             />
+          </button>
 
+          <div class="ustensils-dropdown">
+            <div class="ustensils-search">
+              <input
+                class="ustensils-search-bar"
+                id="searchbar4"
+                type="text"
+                name="search"
+                placeholder="Rechercher un appareil"
+              />
+            </div>
             <img
               src="assets/icons/dropdown-close.svg"
               alt="Close select"
-              class="dropdown-close"
+              class="ustensils-dropdown-close"
             />
-          </button>
+            <div id="listbox2-menu" class="ustensils-menu" role="listbox"></div>
+          </div>
         </div>
       </div>
-
       <div class="card-deck"></div>
     </main>
 
