--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         </div>
       </header>
 
+      <div class="row tags-display"></div>
       <div class="row">
         <div class="ingredients-selection">
           <button type="button" class="ingredients-select">
