Empty recipes, secondary search, tag close implementation

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </div>
         </div>
       </header>
-
+      <div class="empty-recipe"></div>
       <div class="row tags-display"></div>
       <div class="row">
         <div class="ingredients-selection">
