--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 id="searchbar4"
                 type="text"
                 name="search"
-                placeholder="Rechercher un appareil"
+                placeholder="Rechercher un ustensile"
               />
             </div>
             <img
